[gd_scene load_steps=8 format=3 uid="uid://3qes054iv8oe"]

[ext_resource type="Script" uid="uid://bj3l87lgttnq6" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="AudioStream" uid="uid://chvj7470semq8" path="res://assets/music/electronic-hip-hop-adventure-discovery-background-crime-spy-355943.mp3" id="2_vjb58"]
[ext_resource type="Texture2D" uid="uid://cuqk5okeaoix8" path="res://assets/Original Art/Menu-TEXT.png" id="3_con2f"]
[ext_resource type="Texture2D" uid="uid://dsuwdc544qxom" path="res://assets/Original Art/ProjectMeltdown.png" id="4_mhnvy"]

[sub_resource type="Animation" id="Animation_4ytvr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mhnvy"]
resource_name = "fade_out"
length = 8.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3eks"]
_data = {
&"RESET": SubResource("Animation_4ytvr"),
&"fade_out": SubResource("Animation_mhnvy")
}

[node name="Menu" type="Node"]
script = ExtResource("1_yqeox")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 643.0
color = Color(0.58888, 0, 0.10347, 1)

[node name="Play" type="Button" parent="."]
offset_left = 497.0
offset_top = 518.0
offset_right = 637.0
offset_bottom = 565.0
text = "Start Game"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vjb58")
autoplay = true

[node name="Menu-text" type="Sprite2D" parent="."]
position = Vector2(565, 301)
scale = Vector2(2, 2)
texture = ExtResource("3_con2f")

[node name="Controls" type="Button" parent="."]
offset_left = 676.0
offset_top = 519.0
offset_right = 812.0
offset_bottom = 569.0
text = "Controls"

[node name="Credits" type="Button" parent="."]
offset_left = 319.0
offset_top = 516.0
offset_right = 457.0
offset_bottom = 567.0
text = "Credits"

[node name="ProjectMeltdown" type="Sprite2D" parent="."]
position = Vector2(573.5, 320.5)
scale = Vector2(0.600521, 0.597222)
texture = ExtResource("4_mhnvy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectMeltdown"]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_g3eks")
}

[connection signal="pressed" from="Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
